[gd_scene load_steps=5 format=3 uid="uid://bdaoemov6wyro"]

[ext_resource type="PackedScene" uid="uid://c82wwfaqimt1k" path="res://scenes/prototypes/prototype_generator.tscn" id="1_jhdvf"]
[ext_resource type="Script" path="res://scenes/prototypes/user_interface.gd" id="1_wl6ro"]
[ext_resource type="PackedScene" uid="uid://7kicu8uvbxon" path="res://scenes/prototypes/prototype_clicker.tscn" id="2_1h1rw"]
[ext_resource type="Script" path="res://scenes/prototypes/label_corn.gd" id="2_owjha"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wl6ro")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 2.08165e-12)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigator" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer"]
layout_mode = 2

[node name="PrototypeGeneratorLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Prototype Generator"

[node name="PrototypeClickerLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Prototype Clicker"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Resources" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer"]
layout_mode = 2

[node name="CornLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Corn : 15"
script = ExtResource("2_owjha")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MainView" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrototypeClicker" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("2_1h1rw")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")
view = 1

[node name="PrototypeGenerator" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("1_jhdvf")]
layout_mode = 1
user_interface = NodePath("../../..")

[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer/PrototypeGeneratorLink" to="." method="_on_prototype_generator_link_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer/PrototypeClickerLink" to="." method="_on_prototype_clicker_link_pressed"]
